Fix safari dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -65,7 +65,6 @@ small {
 
 a {
     text-decoration: none;
-    color: WindowText;
 }
 
 a:hover {
@@ -78,6 +77,10 @@ p {
 }
 
 @media (prefers-color-scheme: dark) {
+    a {
+        color: #ffffff;
+        text-decoration: none;
+    }
     a:hover {
         color: #ffffffaa;
     }
